--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,13 @@
         android:theme="?attr/actionBarTheme"
         app:title="@string/app_name" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
         android:id="@+id/list_of_quakes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
+        android:dividerHeight="0dp">
 
-    </androidx.recyclerview.widget.RecyclerView>
+    </ListView>
 
 </RelativeLayout>
