--- a/app/src/main/res/layout/list_view_modifier.xml
+++ b/app/src/main/res/layout/list_view_modifier.xml
@@ -1,66 +1,70 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/mag"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:gravity="center"
+        android:textColor="@color/black"
+        tools:text="@string/sample_mag"/>
 
-        <TextView
-            android:id="@+id/mag"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:gravity="center"
-            android:textColor="@color/black"
-            tools:text="@string/sample_mag"/>
+    <View
+        android:layout_width="0.1dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:layout_toEndOf="@id/mag"
+        android:layout_toRightOf="@id/mag"
+        android:background="@color/black"/>
 
-        <View
-            android:layout_width="0.1dp"
-            android:layout_height="56dp"
-            android:layout_toRightOf="@id/mag"
-            android:background="@color/black"
-            android:layout_toEndOf="@id/mag" />
+    <TextView
+        android:id="@+id/quake_at"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:layout_toStartOf="@id/day"
+        android:layout_toLeftOf="@id/day"
+        android:layout_toEndOf="@id/mag"
+        android:layout_toRightOf="@id/mag"
+        android:gravity="bottom"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:text="@string/quake_at"
+        android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/quake_at"
-            android:layout_width="wrap_content"
-            android:layout_height="28dp"
-            android:layout_toEndOf="@id/mag"
-            android:layout_toRightOf="@id/mag"
-            android:gravity="bottom"
-            android:paddingLeft="10dp"
-            android:text="@string/quake_at"
-            android:layout_toLeftOf="@id/day"
-            android:layout_toStartOf="@id/day"/>
+    <TextView
+        android:id="@+id/place"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:layout_below="@id/quake_at"
+        android:layout_toStartOf="@id/day"
+        android:layout_toLeftOf="@id/day"
+        android:layout_toEndOf="@id/mag"
+        android:layout_toRightOf="@id/mag"
+        android:gravity="center_vertical"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        tools:text="@string/sample_place" />
 
-        <TextView
-            android:id="@+id/place"
-            android:layout_width="wrap_content"
-            android:layout_height="28dp"
-            android:layout_toEndOf="@id/mag"
-            android:layout_toRightOf="@id/mag"
-            android:layout_below="@id/quake_at"
-            android:gravity="center_vertical"
-            android:textColor="@color/black"
-            android:paddingLeft="10dp"
-            tools:text="@string/sample_place"
-            android:layout_toLeftOf="@id/day"
-            android:layout_toStartOf="@id/day"/>
+    <View
+        android:layout_width="0.1dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:layout_toEndOf="@id/place"
+        android:layout_toRightOf="@id/place"
+        android:background="@color/black"/>
 
-        <View
-            android:layout_width="0.1dp"
-            android:layout_height="56dp"
-            android:layout_toRightOf="@id/mag"
-            android:background="@color/black"
-            android:layout_toEndOf="@id/place" />
-
-        <TextView
-            android:id="@+id/day"
-            android:layout_width="80dp"
-            android:layout_height="56dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:gravity="center"
-            tools:text="@string/sample_day"/>
-    </RelativeLayout>
-</merge>
+    <TextView
+        android:id="@+id/day"
+        android:layout_width="96dp"
+        android:layout_height="56dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        tools:text="@string/sample_day"/>
+</RelativeLayout>
