--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mag1">#4A7BA7</color>
+    <color name="mag2">#04B4B3</color>
+    <color name="mag3">#10CAC9</color>
+    <color name="mag4">#F5A623</color>
+    <color name="mag5">#FF7D50</color>
+    <color name="mag6">#FC6644</color>
+    <color name="mag7">#E75F40</color>
+    <color name="mag8">#E13A20</color>
+    <color name="mag9">#D93218</color>
+    <color name="mag10">#C03823</color>
 </resources>
